# dota2_stats

./: .eslintrc.json  .gitignore  Makefile  README.md  docker-compose.yml  matches.json  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
api/: app.py  main.py
api/dotaio/: consts.py  queries.py  types.py
api/routes/: match.py  player.py
api/utils/: __init__.py  cache.py  setup.py  tools.py
app/: App.css  App.js  index.js  main.js  match_list.js  matches.js  scoreboard.js
docker/: Dockerfile.api  Dockerfile.parser  Dockerfile.ui  Dockerfile.ui.dev  Dockerfile.ui.requirements
parser/: config.go  go.mod  go.sum  main.go  process.go
public/: index.html
src/: __init__.py  main.py  queries.py  routes.py  server.py  setup.py
src/dota2/: __init__.py  consts.py  queries.py  thread.py
src/dotaio/: thread.py
src/parse/: consts.py  reader.py  tools.py
src/utils/: setup.py  sighandler.py  tools.py
ui/: App.css  App.js  App.tsx  consts.js  consts.ts  custom.d.ts  hero_icon_names.json  index.tsx  main.tsx  matches.js  matches.tsx  parse.js  parse.tsx  parseResults.js  parseResults.tsx  scoreboard.js  scoreboard.tsx
