[tool.poetry]
name = "dota2_stats_api"
version = "0.1.0"
description = ""
authors = ["joeggg <ninjoetsu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
fastapi = "^0.81.0"
pydantic = "^1.9.2"
redis = "^4.3.4"
requests = "^2.28.1"
uvicorn = {extras = ["standard"], version = "^0.18.3"}

[tool.poetry.dev-dependencies]
mypy = "^0.971"
pytest = "^7.1.2"
pylint = "^2.15.0"
black = "^22.6.0"
types-redis = "^4.3.19"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "requests",
]
ignore_missing_imports = true

